<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="activity_social_feed">@string/social_query</string>
  <string name="activity_schedule">Schedule</string>
  <string name="activity_favorites">Favorites</string>

  <string name="experience_level_beginner">beginner</string>
  <string name="experience_level_intermediate">intermediate</string>
  <string name="experience_level_advanced">advanced</string>
  <string name="action_open">Open</string>

  <string name="no_tweets_for_query">No Tweets for %s… yet</string>

  <string name="event_notification_starting_by">By %s</string>
  <string name="event_notification_starting_in">In %s</string>
  <string name="event_notification_count_starting">%s sessions are starting</string>
  <string name="room_event_notification"
    translatable="false">%s: %s</string>
  <plurals name="event_notification_ticker">
    <item quantity="one">1 session is about to start.</item>
    <item quantity="other">%d sessions are about to start.</item>
  </plurals>

  <string name="bottom_bar_schedule_label">Schedule</string>
  <string name="bottom_bar_favorites_label">Favorites</string>
  <string name="bottom_bar_tweets_label">Tweets</string>
  <string name="bottom_bar_venue_label">Venue Info</string>
  <string name="menu_search">Search</string>
  <string name="menu_voice_search">Voice search</string>
  <string name="menu_clear_query">Clear query</string>
  <string name="no_results">No results for this query</string>
  <string name="start_typing_to_search">Start typing to search</string>
  <string name="speaker_list_title">Speakers</string>
  <string name="talks_list_title">Talks</string>

  <string name="tweet_date_not_available">Unknown date</string>
  <string name="tweet_date_recent_format">Posted %1$s at %2$s</string>
  <string name="tweet_date_normal_format">Posted on %1$s at %2$s</string>
  <string name="tweet_date_today">Today</string>
  <string name="tweet_date_yesterday">Yesterday</string>

  <string name="event_details_body_label_when_text">When</string>
  <string name="event_details_body_label_where_text">Where</string>
  <string name="event_details_body_label_about_text">About</string>

  <string name="menu_speaker_twitter">Twitter profile</string>
  <string name="menu_speaker_website">Personal page</string>

  <string name="settings_label">Settings</string>
  <string name="account_category_label">Account</string>
  <string name="sign_out_title">Sign out</string>
  <string name="settings_and_help_title">Settings and help</string>
  <string name="settings_notifications_category">Notifications</string>
  <string name="help_title">Help</string>
  <string name="about_title">About</string>

  <string name="settings_notifications_about_to_start_title">Upcoming events notification</string>
  <string name="settings_notifications_about_to_start_summary_on">Show notifications for favourite events starting soon</string>
  <string name="settings_notifications_about_to_start_summary_off">Do not show notifications for favourite events starting soon</string>
  <string name="settings_about_category">About</string>
  <string name="settings_about_build_version_title">Build version</string>
  <string name="version_x">Version: %1$s</string>
  <string name="settings_debug_category">Debug</string>
  <string name="settings_open_debug_title">Open debug screen</string>

  <string name="venue_info_label">Information</string>
  <string name="venue_about_label">About the venue</string>
  <string name="venue_location_label">Location</string>

</resources>
