<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/account_category_label">
    <Preference
      android:title="culo@culomail.com" android:icon="@drawable/ic_email_default" />
    <Preference
      android:title="@string/sign_out_title" android:icon="@drawable/ic_signout_default" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_and_help_title">

    <SwitchPreference
      android:defaultValue="true"
      android:icon="@drawable/ic_notifications_default"
      android:key="@string/about_to_start_notification_preference_key"
      android:title="@string/settings_notifications_category" />

    <Preference
      android:title="@string/help_title" android:icon="@drawable/ic_help_default" />
    <Preference
      android:title="@string/about_title" android:icon="@drawable/ic_about" />

  </PreferenceCategory>

</PreferenceScreen>
